<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtETitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:text="ROL DE PAGOS"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtETitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="142dp"
        android:layout_marginRight="142dp"
        android:text="FORMULARIO"
        android:textColor="#FF0303"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtECedula"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="-3dp"
        android:layout_marginEnd="279dp"
        android:layout_marginRight="279dp"
        android:layout_marginBottom="582dp"
        android:text="Funcionario:"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtFuncionarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/txtFuncionarios" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="199dp"
        android:text="Cargo:"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtCargo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="189dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:inputType="text"
        tools:text="@string/txtCargo" />

    <EditText
        android:id="@+id/txtHijos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:inputType="text"
        tools:text="@string/txtHijos" />

    <EditText
        android:id="@+id/txtEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="314dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:ems="10"
        android:inputType="text"
        tools:text="@string/txtEstado" />

    <EditText
        android:id="@+id/txtAtrasos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="378dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:ems="10"
        android:inputType="text"
        tools:text="@string/txtAtrasos" />

    <EditText
        android:id="@+id/txtHoras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="434dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:ems="10"
        android:inputType="text"
        tools:text="@string/txtHoras" />

    <EditText
        android:id="@+id/txtSueldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="498dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:ems="10"
        android:inputType="text"
        tools:text="@string/txtSueldo" />

    <TextView
        android:id="@+id/txtEApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="259dp"
        android:text="N° Hijos:"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="324dp"
        android:text="Estado Civil:"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEDireccion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="390dp"
        android:text="Atrasos:"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEDireccion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="448dp"
        android:text="Horas extra:"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEDireccion4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="515dp"
        android:text="El sueldo es:"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        android:layout_marginBottom="49dp"
        android:onClick="registrar"
        android:text="CREAR"
        app:rippleColor="@color/black" />
</RelativeLayout>